--- a/frontend/src/app/pages/register/register.component.scss
+++ b/frontend/src/app/pages/register/register.component.scss
@@ -1,12 +1,12 @@
-.login-form-margin {
+.register-form-margin {
   margin-bottom: 16px;
 }
 
-.login-form-forgot {
+.register-form-forgot {
   text-align: center;
 }
 
-.login-form-button {
+.register-form-button {
   width: 100%;
 }
 
