--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -1,36 +1,43 @@
 <div nz-row nzJustify="center">
+  <h1>Welcome</h1>
   <div class="form-container">
-    <form nz-form
-          [formGroup]="loginForm"
-          class="login-form"
-          (ngSubmit)="login()">
-      <nz-form-item>
-        <nz-form-control nzErrorTip="Please input your e-mail address!">
-          <nz-input-group nzPrefixIcon="user">
-            <input type="email"
-                   nz-input
-                   required
-                   formControlName="email"
-                   placeholder="E-Mail" />
-          </nz-input-group>
-        </nz-form-control>
-      </nz-form-item>
-      <nz-form-item>
-        <nz-form-control nzErrorTip="Please input your Password!">
-          <nz-input-group nzPrefixIcon="lock">
-            <input type="password"
-                   nz-input
-                   required
-                   formControlName="password"
-                   placeholder="Password" />
-          </nz-input-group>
-        </nz-form-control>
-      </nz-form-item>
-      <button nz-button
-              class="login-form-button login-form-margin"
-              [nzType]="'primary'">
-        Log in
-      </button>
-    </form>
+      <form nz-form
+            [formGroup]="loginForm"
+            class="login-form"
+            (ngSubmit)="login()">
+          <nz-form-item>
+              <nz-form-control nzErrorTip="Please input your e-mail address!">
+                  <nz-input-group nzPrefixIcon="user">
+                      <input type="email"
+                             nz-input
+                             required
+                             formControlName="email"
+                             placeholder="E-Mail" />
+                  </nz-input-group>
+              </nz-form-control>
+          </nz-form-item>
+          <nz-form-item>
+              <nz-form-control nzErrorTip="Please input your Password!">
+                  <nz-input-group nzPrefixIcon="lock">
+                      <input type="password"
+                             nz-input
+                             required
+                             formControlName="password"
+                             placeholder="Password" />
+                  </nz-input-group>
+              </nz-form-control>
+          </nz-form-item>
+          <button nz-button
+                  class="login-form-button login-form-margin"
+                  [nzType]="'primary'">
+              Log in
+          </button>
+          <button nz-button
+                  class="login-form-button login-form-margin"
+                  routerLink="/register"
+                  [nzType]="'link'">
+              Register
+          </button>
+      </form>
   </div>
 </div>
