Code prettied up, use regex, README updated

--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -1,5 +1,7 @@
 <div nz-row nzJustify="center">
-  <h1>Welcome</h1>
+    <h1>Welcome</h1>
+</div>
+<div nz-row nzJustify="center">
   <div class="form-container">
       <form nz-form
             [formGroup]="loginForm"
